--- a/src/main/resources/templates/layouts/Master/materialRequisition.html
+++ b/src/main/resources/templates/layouts/Master/materialRequisition.html
@@ -95,9 +95,8 @@
 												<i class="fa fa-refresh" aria-hidden="true"></i> Reset
 											</button>
 
-											<a th:href="@{/gatepass/list}"
-												class="btn btn-success btn-sm"> <i class="fa fa-list"
-												aria-hidden="true"></i> View All
+											<a th:href="@{/gatepass/list}" class="btn btn-success btn-sm">
+												<i class="fa fa-list" aria-hidden="true"></i> View All
 											</a>
 
 
@@ -192,24 +191,7 @@
 															</select>
 														</div>
 
-														<div class="form-group col-md-4">
-															<label for="inputAddress">Work Center Code</label> <input
-																type="text" class="form-control" id="gateEntryDate"
-																title="work center code" readonly>
-														</div>
 
-
-														<div class="form-group col-md-4">
-															<label for="inputPassword4">Work Center Name</label> <select
-																class="form-control" id="departmentDropdown"
-																title="work center name">
-																<option value="">Select</option>
-																<option value="t">text</option>
-																<!-- <option th:each="department :  ${departmentList}"
-																	th:text="${department.deptName}"
-																	th:value=" ${department.deptCode}"></option> -->
-															</select>
-														</div>
 
 														<div class="form-group col-md-4">
 															<label for="inputAddress">Store Code</label> <input
@@ -219,10 +201,10 @@
 
 
 														<div class="form-group col-md-4">
-															<label for="inputPassword4">Store Name</label> <select
-																class="form-control" id="storeName"
-																onchange='selectStore()' title="store name"
-																th:field="*{store}">
+															<label for="inputPassword4">Store Name<span
+																style="color: red">*</span></label> <select class="form-control"
+																id="storeName" onchange='selectStore()'
+																title="store name" th:field="*{store}" required>
 																<option value="">Select</option>
 																<option th:each="store :  ${storeList}"
 																	th:text="${store.description}"
@@ -243,7 +225,7 @@
 													<h5>Item Detail</h5>
 													<div class="box-body">
 
-														<input id="_cr" name="_cr" type="hidden" value="1">
+														<!-- <input id="_cr" name="_cr" type="hidden" value="1"> -->
 
 														<div class="col-sm-12" style="text-align: right">
 
@@ -258,7 +240,7 @@
 														</div>
 
 
-														<div class="table-responsive" style="margin-top: 40px">
+														<div class="table-responsive" style="margin-top: 30px">
 															<table id="example" aria-describedby="example"
 																class="table table-striped display">
 																<thead>
@@ -267,24 +249,18 @@
 
 																		<!-- <th scope="col" class="text-center"
 																			style="width: 50px;">S.No</th> -->
-																		<th scope="col" class="text-center"
-																			style="width: 90px;">Item Code</th>
-																		<th scope="col" class="text-center"
-																			style="width: 90px;">Description</th>
-																		<th scope="col" class="text-center"
-																			style="width: 90px;">UOM</th>
-																		<th scope="col" class="text-center"
-																			style="width: 10px;">Qty <br>in Stock
+																		<th scope="col" class="text-center">Item Code</th>
+																		<th scope="col" class="text-center">Description</th>
+																		<th scope="col" class="text-center">UOM</th>
+																		<th scope="col" class="text-center">Qty <br>in
+																			Stock
 																		</th>
-																		<th scope="col" class="text-center"
-																			style="width: 50px;">Qty <br>Required
+																		<th scope="col" class="text-center">Qty <br>Required
 																		</th>
-																		<th scope="col" class="text-center"
-																			style="width: 50px;">Approved <br>Required
+																		<th scope="col" class="text-center">Approved <br>Required
 																			Qty
 																		</th>
-																		<th scope="col" class="text-center"
-																			style="width: 90px;">Required Date</th>
+																		<th scope="col" class="text-center">Required Date</th>
 
 
 
@@ -301,10 +277,12 @@
 																			name="materialRequisitionDetails[0].srNo"></td> -->
 
 
+																		<!--item code   -->
 																		<td><input type="text"
 																			class="form-control form-control-sm" id="itemCode0"
 																			title="item description" readonly></td>
 
+																		<!-- Description  -->
 																		<td><select id="itemName0"
 																			class="form-control form-control-sm select itemContainer0"
 																			required title="item" onchange="selectItem()"
@@ -315,27 +293,31 @@
 																					th:value=" ${item.itemCode}"></option>
 																		</select></td>
 
-
+																		<!--  uom  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm" id="uom0"
-																			title="uom" name='materialRequisitionDetails[0].uom'
-																			readonly></td>
+																			style="width: 90px;" title="uom"
+																			name='materialRequisitionDetails[0].uom' readonly></td>
 
+																		<!-- qty in stock  -->
 																		<td><input type="number" title="qty"
 																			class="form-control form-control-sm"
-																			style="width: 70px;" id='qty0'
+																			style="width: 100px;" id='qty0'
 																			name="materialRequisitionDetails[0].qty" step="0.25"
 																			readonly></td>
-
+																		<!-- qty required  -->
 																		<td><input type="number"
 																			class="form-control form-control-sm" title="net qty"
-																			name="materialRequisitionDetails[0].netQty"></td>
+																			name="materialRequisitionDetails[0].netQty"
+																			style="width: 100px;"></td>
 
+																		<!-- approved required qty  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="srNoClaimUnder"
 																			name="materialRequisitionDetails[0].srNoClaimUnder"></td>
 
+																		<!-- required date  -->
 																		<td><input type="date"
 																			class="form-control form-control-sm"
 																			id="orderItemuom" title="" style="width: 150px"
@@ -362,11 +344,11 @@
 
 
 
-												
+
 
 											</div>
 											<!-- /.box -->
-											
+
 										</div>
 
 
@@ -525,23 +507,38 @@
 												//idIndex2++;
 												$('#adr' + j)
 														.html(
-																"<td><input type='number' title='sno.' class='form-control form-control-sm' style='width: 70px;' name='materialRequisitionDetails[0].srNo'></td>"
+																<!--item code   -->
+																
+																"<td><input type='text' class='form-control form-control-sm' id='itemCode"+j+"' title='item description' readonly></td>"
 
-																		+ "<td><select class='form-control indentContainer form-control-sm select' id='orderIndentNumberPo' name='materialRequisitionDetails[0].item' title='item' onchange='getOrderIndentDetailPo()' required><option value=''>Select Indent</option><option th:each='po :  ${listPO}' th:text='${po.poNumber}' th:value=' ${po.poNumber}'></option></select></td>"
+																<!-- Description  -->
+																
+																		+ "<td><select id='itemName"+j+"' class='form-control form-control-sm select itemContainer"+j+"' required title='item' onchange='selectItem()'name='materialRequisitionDetails["+j+"].item'><option value=''>Select</option><option th:each='item :  ${itemList} th:text='${item.description}'th:value=' ${item.itemCode}'></option></select>'</td>"
 
-																		+ "<td><input type='text' class='form-control form-control-sm' style='width: 170px;' id='orderItemDescription' <td>"
+																		
+																		<!--  uom  -->
+																		+ "<td><input type='text' class='control form-control-sm' id='uom"+j+"' style='width: 90px;' title='uom'name='materialRequisitionDetails["+j+"].uom' readonly> <td>"
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
+																		<!-- qty in stock  -->
+																		
+																		+ "<td><input type='number' title='qty' class='form-control form-control-sm' style='width: 100px;' id='qty"+j+"'name='materialRequisitionDetails["+j+"].qty' step='0.25' readonly> </td>"
 
-																		+ "<td><input type='number' title='qty' class='form-control form-control-sm' style='width: 70px;' name='materialRequisitionDetails[0].qty'></td>" // Description
+																		<!-- qty required  -->
+																		
+																		+ "<td><input type='number'class='form-control form-control-sm' title='net qty' name='materialRequisitionDetails["+j+"].netQty'style='width: 100px;'></td>" 
 
-																		+ "<td><input type='number' class='form-control form-control-sm' title='net qty'name='materialRequisitionDetails[0].netQty'></td>" // Item Received
+																		
+																		<!-- approved required qty  -->
+																		+ "<td><input type='text' class='form-control form-control-sm' id='technicalQualification' title='srNoClaimUnder'name='materialRequisitionDetails["+j+"].srNoClaimUnder'></td>" // Item Receive
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='technicalQualification' title='srNoClaimUnder' name='materialRequisitionDetails[0].srNoClaimUnder'></td>" // UOM
+																		
 
-																		+ "<td><input type='date' class='form-control form-control-sm' id='orderItemuom' title='' style='width: 150px' name='materialRequisitionDetails[0].srNoSendForRep'></td>" //  Mrn Qty
+																		
+																		<!-- required date  -->
+																		+ "<td><input type='date' class='form-control form-control-sm' id='orderItemuom' title='' style='width: 150px'name='materialRequisitionDetails["+j+"].srNoSendForRep'></td>" 
 
-														);
+																	);
+												
 												$('#example').append(
 														'<tr id="adr' + (j + 1)
 																+ '"></tr>');
