--- a/src/main/resources/templates/layouts/listview/listofitem.html
+++ b/src/main/resources/templates/layouts/listview/listofitem.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
@@ -51,7 +58,7 @@
 															<th scope="col">Category</th>
 															<th scope="col">Store</th>
 															<th scope="col">Uom Code</th>
-															
+
 															<th scope="col">Product Group</th>
 
 															<th scope="col">Action</th>
@@ -62,21 +69,22 @@
 															<td th:text="${iter.index}">1</td>
 															<td th:text="${item.itemCode}">Garrett Winters</td>
 															<td th:text="${item.description}">Garrett Winters</td>
-															<td th:text="${item.category.categCode}">Garrett Winters
-															</td>
-															<td th:text="${item.store.storeCode}">Garrett Winters</td>
+															<td th:text="${item.category.categCode}">Garrett
+																Winters</td>
+															<td th:text="${item.store.storeCode}">Garrett
+																Winters</td>
 															<td th:text="${item.uom.uomCode}">Garrett Winters</td>
-														
+
 															<td th:text="${item.productGroup}">Good Guys</td>
 
 
 
 															<td><span> <a
-																		th:href="@{/item/edit/{id}(id=${item.itemCode})}">
-<em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
-																<span> <a
-																		th:href="@{/item/delete/{id}(id=${item.itemCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></span>
-															</td>
+																	th:href="@{/item/edit/{id}(id=${item.itemCode})}">
+																		<em class="fa fa-edit" style="color: blue;"> Edit</em>
+																</a></span> <span> <a
+																	th:href="@{/item/delete/{id}(id=${item.itemCode})}"><em
+																		class="fa fa-times" style="color: red"> Remove</em></a></span></td>
 														</tr>
 
 
@@ -87,8 +95,9 @@
 										</div>
 
 										<div class="box-footer">
-											
-	<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
 
 										</div>
 
@@ -103,17 +112,21 @@
 					</div>
 				</section>
 			</div>
+		</div>
+	</div>
 
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
-
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
