--- a/src/main/resources/templates/layouts/listview/listofmaterialrequisition.html
+++ b/src/main/resources/templates/layouts/listview/listofmaterialrequisition.html
@@ -19,6 +19,14 @@
 <link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
 	th:href="@{/css/skins/_all-skins.min.css}">
 
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
 
 </head>
 
@@ -42,8 +50,12 @@
 							<div class="col-md-12" style="margin-top: 20px;">
 
 								<div class="box box-primary">
+
+									<input type="hidden" id="mess" name="mess"
+										th:value="${message}">
+
 									<div class="box-header with-border">
-										<h3 class="box-title">List of Open Indent</h3>
+										<h3 class="box-title">List of Requisition</h3>
 									</div>
 									<!-- form start -->
 									<form role="form">
@@ -53,41 +65,27 @@
 													<thead>
 														<tr>
 															<th scope="col">#</th>
-															<th scope="col">Indent Number</th>
-															<th scope="col">Indent Date</th>
+															<th scope="col">Requisition Number</th>
+															<th scope="col">Requisition Date</th>
 
 															<th scope="col">Action</th>
 
 														</tr>
 													</thead>
 													<tbody>
-														<tr th:each="indent,iter  : ${openIndentList}">
+														<tr th:each="requisition,iter  : ${listMaterialRequisition}">
 															<td th:text="${iter.index}">1</td>
-															<td th:text="${indent.indentNumber}">Garrett Winters</td>
-															<td th:text="${#indent.indentDate(sprint.releaseDate, 'dd-MMM-yyyy')}">Garrett Winters</td>
+															<td th:text="${requisition.requisitionNo}">Garrett Winters</td>
+															<td th:text="${#dates.format(requisition.requisitionDate, 'dd-MMM-yyyy')}">Garrett
+																Winters</td>
 
 
 
-															<!-- <td><span class="badge bg-success">Active</span></td> -->
-
-															<td>
-															<span th:if="${indent.approvalStatus1=='N'}"> <a
-																	th:href="@{/openindent/edit/{id}(id=${indent.indentNumber})}"><em
-																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> 
-																		
-																<span th:if="${indent.approvalStatus1=='Y'}"> <a
-																	th:href="@{/openindent/view/{id}(id=${indent.indentNumber})}"><em
-																		class="fa fa-edit" style="color: blue;"> View</em></a></span> 
-																		
-																	
-																		
-																		
-																		
-																		<span>
-																		
-																		
+															<td><span> <a
+																	th:href="@{/materialrequisition/edit/{id}(id=${requisition.requisitionNo})}"><em
+																		class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span>
 																	<a
-																	th:href="@{/openindent/delete/{id}(id=${indent.indentNumber})}"><em
+																	th:href="@{/materialrequisition/delete/{id}(id=${requisition.requisitionNo})}"><em
 																		class="fa fa-times" style="color: red"> Remove</em></a>
 															</span></td>
 														</tr>
@@ -101,8 +99,7 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="button" value="Go back!" class="btn btn-link"
-												onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
 										</div>
 
 									</form>
@@ -118,7 +115,27 @@
 			</div>
 		</div>
 	</div>
+
 	<div th:replace="fragments/footer :: footer">...</div>
+
+	<script>
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
+
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
+				});
+			} else {
+				console.log("ajax request : " + message);
+			}
+
+		});
+	</script>
+
 	<!--   <section class="content">
         
         </section>-->
